# ComfyUI_Bernini_Director

./: .gitignore  README.md  README_EN.md  README_ZH.md  __init__.py  pyproject.toml  requirements.txt
director/: __init__.py  audio_export.py  core_sampling.py  core_text_encode.py  executor_core.py  frame_align.py  gen_timeline.py  http_routes.py  plan.py  progress.py  prompt_enhance_media.py  prompt_enhance_routes.py  prompt_enhance_runtime.py  segment_cache.py  segment_continuity.py  segment_runtime.py  vram_cleanup.py
example_workflows/: bernini_director_core_rv2v.json
lib/: __init__.py  audio_io.py  image_prep.py  prompt_enhancer.py  ref_images.py  shot_detect.py  task_modes.py  task_prompts.py  video_io.py
nodes/: __init__.py  conditioning.py  director.py  director_common.py
web/js/: bernini_gen_timeline.js  bernini_image_batch.js  bernini_prompt_enhancer.js  bernini_timeline.js
